--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -8,7 +8,7 @@
 
 .banner {
     width: 100%;
-    height: 200px;
+    height: 400px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -20,19 +20,25 @@
 }
 
 .video-bubble {
-    width: 200px;
-    height: 200px;
+    width: 10%;
+    margin-top: 1%;
+    
 }
 
 .video-bubble iframe {
-    width: 100%;
-    height: 100%;
+   
     border-radius: 100%;
     border: solid 10px;
+    height: 300px;
 }
 
 .video-bubble iframe .light-room {
     border-color: rgb(37, 204, 154);
+}
+
+.banner-content{
+    width: 30%;
+    margin-left: 0%;
 }
 
 /** FOOTER **/
