--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -1,18 +1,37 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Amiko:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amiko&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+
+
+
+
+
+
 /** NAVBAR **/
 
 
 
 
-
+body{
+    background-image: url('upload/DESIGN\ DE\ FOND.svg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    
+}
 /** BANNER **/
 
 .banner {
+    margin-top: 70%;
     width: 100%;
     height: 400px;
-    display: flex;
+    display: inline-flex;
     justify-content: space-evenly;
     align-items: center;
     background-color: #EAFFFB;
+    font-family: Abel;
 }
 
 .banner .light-room {
@@ -39,6 +58,11 @@
 .banner-content{
     width: 30%;
     margin-left: 0%;
+}
+
+.banner-link a{
+    text-decoration: none;
+    color: black;
 }
 
 /** FOOTER **/
