--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -1,3 +1,38 @@
+/** GENERAL **/
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family: 'Abel', sans-serif;
+    font-weight: 400;
+    color: #646363;
+}
+
+h1, h2, h3, h4, h5, h6, .amiko-bold {
+    font-family: 'Amiko', sans-serif;
+    font-weight: 700;
+    color: #3B4040;
+}
+
+.amiko {
+    font-family: 'Amiko', sans-serif;
+    font-weight: 400;
+}
+
+Link {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 200;
+}
+
+.poppins-thin {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+}
+
+.container {
+    margin: 0% 10%;
+}
+
 /** NAVBAR **/
 
 
@@ -6,33 +41,109 @@
 
 /** BANNER **/
 
-.banner {
+.banner-wrapper {
     width: 100%;
-    height: 200px;
-    display: flex;
-    justify-content: space-evenly;
+    height: auto;
+    padding: 30px 0%;
+}
+
+.banner-wrapper.the-sense {
+    background-color: #EAFFFB
+}
+
+.banner-wrapper .banner-flex {
+    display: inline-flex;
+    justify-content: space-between;
     align-items: center;
 }
 
-.banner .light-room {
-    background-color: rgb(132, 196, 196);
+.banner-flex .banner-bubble {
+    width: 30%;
+    display: inline-flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.video-bubble {
+.banner-flex .banner-bubble .image-wrapper {
     width: 200px;
     height: 200px;
-}
-
-.video-bubble iframe {
-    width: 100%;
-    height: 100%;
     border-radius: 100%;
     border: solid 10px;
+    display: inline-flex;
+    justify-content: space-around;
+    align-items: center;
+    overflow: hidden;
 }
 
-.video-bubble iframe .light-room {
+.banner-flex .banner-bubble .image-wrapper img {
+    margin-top: 40%;
+}
+
+.banner-flex .banner-content {
+    width: 60%;
+}
+
+/* .banner-wrapper {
+    width: 100%;
+    height: 250px;
+}
+
+.banner-wrapper .banner-flex {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.video-wrapper {
+    width: 25%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.video-wrapper .video-bubble {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    border: solid 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    overflow: hidden;
+}
+
+.video-wrapper .video-bubble img {
+    width: 200%;
+    height: 200%;
+    margin-top: 15%;
+}
+
+.video-bubble.the-sense {
+    border-color: rgb(182, 182, 182);
+}
+
+.video-bubble.light-room {
     border-color: rgb(37, 204, 154);
 }
+
+.video-bubble.dark-room {
+    border-color: rgb(153, 20, 20);
+}
+
+.banner-content {
+    width: 100%;
+}
+
+.banner-content .banner-title {
+    text-transform: uppercase;
+}
+
+.banner-content .banner-title img {
+    width: 100px;
+} */
 
 /** FOOTER **/
 
