--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -1,7 +1,28 @@
+.body{
+    scroll-behavior: smooth;
+}
+
 /** NAVBAR **/
+.navbar{
+    background-color:rgba(255, 255, 255,0.5);
+    backdrop-filter: blur(10px);
+    font-weight: bold;
+    width: 100%;
+}
+.nav{
+    position: fixed;
+}
+
+.navbar a{
+    color: black;
+}
+
+.home_logo_holder{
+    height: 100%;
+}
 
 
-
+/**  **/
 
 
 /** BANNER **/
