--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -35,23 +35,27 @@ Link {
 
 /** NAVBAR **/
 .navbar{
-    background-color:rgba(255, 255, 255,0.5);
-    backdrop-filter: blur(10px);
-    font-weight: bold;
     width: 100%;
-}
-.nav{
-    position: fixed;
+    margin: 0 !important;
+    position: fixed !important;
+    background-color:rgba(255, 255, 255,0.5);
+    backdrop-filter: blur(5px);
+
 }
 
 .navbar a{
     color: black;
+    font-weight: bold;
+    font-size: 200%;
+    text-decoration: none;
 }
 
 .home_logo_holder{
     height: 100%;
 }
-
+.bold{
+    font-weight: bold;
+}
 
 /**  **/
 
