--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -285,6 +285,37 @@ link {
     color: gray;
 }
 
+/** FAQ **/
+
+.regroup-faq{
+    margin-top: 3%;
+}
+
+.regroup-faq h2{
+    margin-left: 5%;
+}
+
+.faq-button{
+    width: 100%;
+    border: none;
+    margin-top: 1%;
+
+    font-size: 20px;
+    background-color: white;
+    
+}
+
+.faq-button p{
+    font-size: 20px;
+    color: #646363;
+    font-family: Abel;
+    text-align: left;
+}
+
+.desc-faq p{
+    color: #beb9b9;
+}
+
 /** NEWS **/
 
 .news-header {
