--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -113,6 +113,7 @@ link {
 .navbar a:hover{
     color: black;
     text-decoration: underline;
+    transform: scale(1.2);
 }
 
 .navbar button{
@@ -142,8 +143,7 @@ link {
 .parallax{
   background-image: url("../public/img/Logo\ Haut\ de\ Page.png");
   height: 100vh;
-  width: auto;
-  background-attachment: fixed;
+  width: 99vw;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -361,7 +361,7 @@ link {
 /** SIGN**/
 
 .img-sign{
-    background-image: url("img/image 42.svg");
+    background-image: url("../public/img/image\ 42.svg");
     background-size: 100%;
     background-repeat: no-repeat;
     height: 500px;
@@ -378,7 +378,7 @@ link {
 .form-sign{
     height: 400px;
     background-color: white;
-    background-image: url("img/Logo.svg");
+    background-image: url("../public/img/Logo.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 50%;
