--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -510,3 +510,10 @@ link {
     border-radius: 100%;
     margin-left: 5%;
 }
+
+/** DROP-DOWN EDITS **/
+
+.dropdown-menu {
+    right: 0;
+    left: auto !important;
+}
