--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -195,6 +195,8 @@ link {
     width: 100%;
     height: auto;
     padding: 30px 0%;
+    z-index: 2;
+    position: relative;
 }
 
 .banner-wrapper.the-sense {
@@ -299,7 +301,7 @@ link {
 
 .vecteur1 {
     width: 100%;
-    margin-top: -400px;
+    margin-top: -22%;
 }
 
 /** CARD **/
@@ -541,96 +543,11 @@ link {
 }
 /** FOOTER **/
 
-.footer {
-    background-color: #3B4040;
-    width: 100%;
-    display: flex;
-}
-    
-.leftfooter{
-    width: 20%;
-    margin-left: 3%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-}
-
-.leftfooter a{
-    margin-left: 15%;
-    text-decoration: none;
-    color: #82FFE1 ;
-    font-size: 15px;
-}
-
-.centerfooter{
-    width: 25%;
-    text-align: center;
-    margin-left: 15%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-}
-
-.centerfooter p{
-    color: #82FFE1 ;
-    font-size: 18px;
-}
-
-.rightfooter{
-    width: 20%;
-    text-align: center;
-    margin-top: 2%;
-    margin-bottom: 2%;
-}
-
-.rightfooter a{
-    margin-left: 15%;
-    text-decoration: none;
-    color: #82FFE1 ;
-    font-size: 15px;
-    
-}
-
-.buttonfooter{
-    width: 18%;
-    text-align: center;
-    display: inline-block;
-    margin-top: 2%;
-    margin-bottom: 2%;
-}
-
-#you{
-    border-radius: 100%;
-    margin-left: 5%;
-}
-
 /** DROP-DOWN EDITS **/
 
 .dropdown-menu {
     right: 0;
     left: auto !important;
-}
-
-
-/** Footer **/
-
-
-.text-right-icons{
-    float: right !important;
-}
-
-.login-field {
-    text-align-last: start;
-    width: 100%;
-    display: inline-flex;
-    justify-content: space-between;
-    align-items:baseline;
-}
-
-.login-field .field-title {
-    width: 25%;
-}
-
-.login-field .field-control {
-    width: 75%
 }
 
 /** Login Dropdown **/
